fix: layout of the website to make buttons align left and right

--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,5 @@ h1 {
 }
 
 p {
-  display: inline-block;
+  padding-right: 10px;
 }
